--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <<h1>Transerve Home</h1>
-    <href a="student.php">Student Form</href>
-    <href a="faculty.php">Faculty Form</href>
+    <a href="student.php">Student Form</a>
+    <a href="faculty.php">Faculty Form</a>
   </body>
 </html>
