--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <<h1>Transerve Home</h1>
-    <a href="student.php">Student Form</a>
-    <a href="faculty.php">Faculty Form</a>
+    <h1>Transerve Home</h1>
+    <a href="student.php" class = "button">Student Form</a><br>
+    <a href="faculty.php" class = "button">Faculty Form</a>
   </body>
 </html>
