--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Transerve Home</h1>
-    <a href="student.php" class = "button">Student Form</a><br>
-    <a href="faculty.php" class = "button">Faculty Form</a>
+    <a href="student.php"><div class = "button">Student Form</div></a>
+    <a href="faculty.php"><div class = "button">Faculty Form</div></a>
   </body>
 </html>
