--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <<title>TranServe Home</title>
   </head>
   <body>
-    <h1>Transerve Home</h1>
+    <h1>TranServe Home</h1>
     <a href="student.php"><div class = "button">Student Form</div></a>
     <a href="faculty.php"><div class = "button">Faculty Form</div></a>
+    <a href="viewer.php"><div class = "button">View Hours</div></a>
   </body>
 </html>
