--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-    <<title>TranServe Home</title>
+    <title>TranServe Home</title>
   </head>
   <body>
     <h1>TranServe Home</h1>
