--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>TranServe Home</h1>
-    <a href="student/student.php"><div class = "button">Student Form</div></a>
+    <a href="student.php"><div class = "button">Student Form</div></a>
     <a href="faculty.php"><div class = "button">Faculty Form</div></a>
     <a href="viewer.php"><div class = "button">View Hours</div></a>
   </body>
